Bug 1359051 - Define cacheFlush for non-Simulator ARM64 builds. r=tcampbell, a=gchang